fixed selection bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 * {
